MudSimpleTable: Fix uneven horizontal padding (#3798, #3799)

--- a/src/MudBlazor/Styles/components/_simpletable.scss
+++ b/src/MudBlazor/Styles/components/_simpletable.scss
@@ -52,14 +52,7 @@
 .mud-simple-table.mud-table-dense {
     & * tr {
         & td, th {
-            padding: 6px 24px 6px 16px;
-            padding-inline-start: 16px;
-            padding-inline-end: 24px;
-        }
-
-        & td, th:last-child {
-            padding-right: 16px;
-            padding-inline-end: 16px;
+            padding: 6px 16px;
         }
     }
 }
